src/component/status_log/snapshots/envision__component__status_log__tests__view_all_levels.snap
---
source: src/component/status_log/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│✗ Error                               │
│⚠ Warning                             │
│✓ Success                             │
│ℹ Info                                │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
