src/component/status_log/snapshots/envision__component__status_log__tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/status_log/tests.rs
expression: terminal.backend().to_string()
---
⚠ Slow query                            
✓ Connected                             
ℹ Server started
