src/component/status_log/snapshots/envision__component__status_log__tests__view_empty.snap
---
source: src/component/status_log/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
