src/component/status_log/snapshots/envision__component__status_log__tests__view_focused.snap
---
source: src/component/status_log/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│⚠ High memory usage                   │
│✓ Connection established              │
│ℹ Server started                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
