src/component/status_log/snapshots/envision__component__status_log__tests__view_with_messages.snap
---
source: src/component/status_log/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│✓ Success message                     │
│ℹ Info message                        │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
