src/component/status_log/snapshots/envision__component__status_log__tests__view_with_show_timestamps.snap
---
source: src/component/status_log/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│ℹ [12:34] Message                                         │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
