src/component/status_log/snapshots/envision__component__status_log__tests__view_with_title.snap
---
source: src/component/status_log/tests.rs
expression: terminal.backend().to_string()
---
┌Status────────────────────────────────┐
│ℹ Test                                │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
